src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Agency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact from the agency for the opportunity</description>
        <inlineHelpText>Buyer Contact: Account Name IDEQUALSOpportunity: Account Name ID</inlineHelpText>
        <label>Agency Contact</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Agency Contact)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_DoubleClick_ID__c</fullName>
        <formula>Agency_Name__r.HW_Account_DoubleClick_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency DoubleClick ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HW Agency Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (HW Agency Name)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreed_On_Conceptual_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do the Buyer and the Seller agree on the design ?</inlineHelpText>
        <label>Agreed On Conceptual Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amended_Contract_Billing_Frequency__c</fullName>
        <formula>TEXT(SBQQ__AmendedContract__r.SBQQ__Quote__r.SBQQ__BillingFrequency__c)</formula>
        <label>Amended Contract Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Combined__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;CPQ_Opportunity&quot;,
Annual_Contract_Value__c,
FC_DBD_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field combines the CPQ and Zoura values together.</inlineHelpText>
        <label>Amount Combined</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Half__c</fullName>
        <formula>Amount  *  1/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Half)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>TEXT(Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_REE_Portion__c</fullName>
        <label>REE Portion of Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_x_Probability__c</fullName>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount x Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amplify_Opportunity2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked only for Amplify Opportunities</description>
        <inlineHelpText>Should be checked only for Amplify Opportunities</inlineHelpText>
        <label>Integrated Opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analytic_Ordered__c</fullName>
        <description>Used to tell Acctg that they have attached the provisioning form should it be necessary</description>
        <inlineHelpText>Check the box if Analytics are being ordered</inlineHelpText>
        <label>Analytics Ordered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes and Provisioning Form attached to opp</fullName>
                </value>
                <value>
                    <fullName>No analytics ordered</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <formula>IF(ISBLANK(Pre_Conversion_ACV__c)
, ((IF ( SBQQ__Renewal__c == TRUE 
, SBQQ__PrimaryQuote__r.Quote_ACV__c - Renewal_Oppy_Value__c
, IF ( TEXT(StageName) = &quot;Cancellation&quot; || TEXT(StageName) = &quot;Opt Out&quot; || TEXT(StageName) = &quot;Renegotiation&quot; 
, ACV_Primary_Amendment__c 
, ACV_Primary_Amendment__c - SBQQ__AmendedContract__r.SBQQ__Opportunity__r.ACV_Primary_Amendment__c ))))
,Pre_Conversion_ACV__c)</formula>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Appointment taken to talk &quot;bi-directional&quot;</inlineHelpText>
        <label>Appointment Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_they_still_a_Customer__c</fullName>
        <label>Are they still a Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Effective_Date__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, have other products</fullName>
                </value>
                <value>
                    <fullName>No Longer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_Them_To_Buy_Date__c</fullName>
        <label>Ask Them To Buy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ask_Them_To_Buy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask Them To Buy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Timeframe__c</fullName>
        <description>Auto renewal timeframe in days for when customer&apos;s order will auto-renew and when they need to cancel by in number of days before end of contract.</description>
        <inlineHelpText>Number of days that the Contract will Auto Renew before the end of the current contract.</inlineHelpText>
        <label>Auto Renewal Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                    <default>true</default>
                    <label>60</label>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPMS_Summary__c</fullName>
        <label>BPMS Summary</label>
        <summarizedField>OpportunityLineItem.FC_DBD_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.FC_Seg3_Text__c</field>
            <operation>equals</operation>
            <value>BPMS</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BPM_Region2__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>BPM Region2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPM_Region__c</fullName>
        <formula>TEXT(Account.BPM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPM Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <label>Bill To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account_ID__c</fullName>
        <formula>Billing_Contact__r.Account.HW_Account_DoubleClick_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account DoubleClick ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Type__c</fullName>
        <formula>Text(Billing_Contact__r.Account.Media_Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Billing_Contact__r.Billing_Email_Address__c</formula>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_ID__c</fullName>
        <formula>Billing_Contact__r.Billing_Contact_ID_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <formula>Billing_Contact__r.FirstName + 
If(ISBlank(Billing_Contact__r.LastName), Billing_Contact__r.LastName, &apos; &apos; + Billing_Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Role__c</fullName>
        <formula>IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Attendee - Private Consultation&quot; ), &quot;Attendee - Private Consultation; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Attendee - Quarterly Briefing&quot; ), &quot;Attendee - Quarterly Briefing; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Bill to&quot; ), &quot;Bill to; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Decision Maker&quot; ), &quot;Decision Maker; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Influencer&quot; ), &quot;Influencer; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Location Contact - Non-user&quot; ), &quot;Location Contact - Non-user; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Location Contact - User&quot; ), &quot;Location Contact - User; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Media Creative Contact&quot; ), &quot;Media Creative Contact; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Purchaser&quot; ), &quot;Purchaser; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Sold to&quot; ), &quot;Sold to; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;Technical Support&quot; ), &quot;Technical Support; &quot;,null ) &amp; 
IF ( INCLUDES ( Billing_Contact__r.Role__c , &quot;User&quot; ), &quot;User; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Billing Contact_2)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Day_Of_Month__c</fullName>
        <inlineHelpText>This field is used for declaring the Amendment Billing Day Of Month to get the correct prorated amount for the amended products.</inlineHelpText>
        <label>Amendment Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Delivery_Method__c</fullName>
        <description>How is the invoice being sent?</description>
        <inlineHelpText>How is the invoice being sent?</inlineHelpText>
        <label>Billing Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Installment Bill</fullName>
                </value>
                <value>
                    <fullName>Intercompany MKT</fullName>
                </value>
                <value>
                    <fullName>Intercompany MS</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>MetroStudy</fullName>
                </value>
                <value>
                    <fullName>Non-Cash Revenue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-Bill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boomi_Integration_Error_Bypass_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicates that a Boomi Process has experienced an error and this record requires analysis before releasing for re-processing by the integration.</description>
        <inlineHelpText>Checkbox indicates that a Boomi Process has experienced an error and this record requires analysis before releasing for re-processing by the integration.</inlineHelpText>
        <label>Boomi Integration Error Bypass Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Group_BPM__c</fullName>
        <label>Brand Group - BPM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Remodeling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the buyer has enough budget to complete the transaction</inlineHelpText>
        <label>Budget Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer_Contact_Email__c</fullName>
        <formula>Buyer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Contact_Fax__c</fullName>
        <formula>Buyer_Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Contact Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Contact_ID__c</fullName>
        <formula>Buyer_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Contact_Name__c</fullName>
        <formula>Buyer_Contact__r.FirstName +&quot; &quot;+Buyer_Contact__r.LastName</formula>
        <label>Buyer Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Contact_Phone__c</fullName>
        <formula>Buyer_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Buyer Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Roles_Understood__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are Opportunity Contact Roles clearly assigned</inlineHelpText>
        <label>Buyer Roles Understood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONS_Summary__c</fullName>
        <label>CONS Summary</label>
        <summarizedField>OpportunityLineItem.FC_DBD_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.FC_Seg3_Text__c</field>
            <operation>equals</operation>
            <value>CONS</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cancellation_Category__c</fullName>
        <label>Cancellation Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Loss</fullName>
                </value>
                <value>
                    <fullName>Lack of Budget</fullName>
                </value>
                <value>
                    <fullName>Left Market</fullName>
                </value>
                <value>
                    <fullName>No Longer Need</fullName>
                </value>
                <value>
                    <fullName>Non Payment</fullName>
                </value>
                <value>
                    <fullName>Unhappy with Data Quality</fullName>
                </value>
                <value>
                    <fullName>Insufficient Training/Support</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship</fullName>
                </value>
                <value>
                    <fullName>Metrostudy/Data</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Contract Expiration</fullName>
                </value>
                <value>
                    <fullName>Admin entry</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Effective_Date__c</fullName>
        <label>Cancellation Effective Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Q1 this year</fullName>
                </value>
                <value>
                    <fullName>Q2 this year</fullName>
                </value>
                <value>
                    <fullName>Q3 this year</fullName>
                </value>
                <value>
                    <fullName>Q4 this year</fullName>
                </value>
                <value>
                    <fullName>Q1 next year</fullName>
                </value>
                <value>
                    <fullName>Q2 next year</fullName>
                </value>
                <value>
                    <fullName>Q3 next year</fullName>
                </value>
                <value>
                    <fullName>Q4 next year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Notes_Sales__c</fullName>
        <inlineHelpText>For Sales&apos; use</inlineHelpText>
        <label>Cancellation Notes from RD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Opt_Out_Effective_Date__c</fullName>
        <description>This field is used to record the future cancellation/opt out date for this opportunity.</description>
        <label>Cancellation/Opt Out Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason_Details__c</fullName>
        <label>Cancellation Reason Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Data qualty</fullName>
                </value>
                <value>
                    <fullName>Did not use</fullName>
                </value>
                <value>
                    <fullName>Merger</fullName>
                </value>
                <value>
                    <fullName>No longer doing business in market/industry</fullName>
                </value>
                <value>
                    <fullName>Too expensive/not in budget</fullName>
                </value>
                <value>
                    <fullName>Product features</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Longer Using Product</fullName>
                </value>
                <value>
                    <fullName>Non Payment / Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Lack of Budget</fullName>
                </value>
                <value>
                    <fullName>Contract Renegotiation / Contract Forgiveness</fullName>
                </value>
                <value>
                    <fullName>No Longer in Market</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Belfiore</fullName>
                    <isActive>false</isActive>
                    <label>Belfiore</label>
                </value>
                <value>
                    <fullName>Bohlke</fullName>
                    <isActive>false</isActive>
                    <label>Bohlke</label>
                </value>
                <value>
                    <fullName>Company Merger</fullName>
                    <isActive>false</isActive>
                    <label>Company Merger</label>
                </value>
                <value>
                    <fullName>Company Out of Business</fullName>
                    <isActive>false</isActive>
                    <label>Company Out of Business</label>
                </value>
                <value>
                    <fullName>Concord Group</fullName>
                    <isActive>false</isActive>
                    <label>Concord Group</label>
                </value>
                <value>
                    <fullName>Core Logic</fullName>
                    <isActive>false</isActive>
                    <label>Core Logic</label>
                </value>
                <value>
                    <fullName>Costar</fullName>
                    <isActive>false</isActive>
                    <label>Costar</label>
                </value>
                <value>
                    <fullName>Customer Turnover</fullName>
                    <isActive>false</isActive>
                    <label>Customer Turnover</label>
                </value>
                <value>
                    <fullName>Gregory Group</fullName>
                    <isActive>false</isActive>
                    <label>Gregory Group</label>
                </value>
                <value>
                    <fullName>Home Builders Research</fullName>
                    <isActive>false</isActive>
                    <label>Home Builders Research</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <isActive>false</isActive>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>Internet</fullName>
                    <isActive>false</isActive>
                    <label>Internet</label>
                </value>
                <value>
                    <fullName>JBREC</fullName>
                    <isActive>false</isActive>
                    <label>JBREC</label>
                </value>
                <value>
                    <fullName>John Burns</fullName>
                    <isActive>false</isActive>
                    <label>John Burns</label>
                </value>
                <value>
                    <fullName>Lack of Relationship</fullName>
                    <isActive>false</isActive>
                    <label>Lack of Relationship</label>
                </value>
                <value>
                    <fullName>Landvision</fullName>
                    <isActive>false</isActive>
                    <label>Landvision</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Green - Renew/Upsell</fullName>
                    <color>#33CC00</color>
                    <label>Green - Renew/Upsell</label>
                </value>
                <value>
                    <fullName>Red - Cancellation</fullName>
                    <color>#FF0000</color>
                    <label>Red - Cancellation</label>
                </value>
                <value>
                    <fullName>Red - Downgrade</fullName>
                    <color>#FF0000</color>
                    <label>Red - Downgrade</label>
                </value>
                <value>
                    <fullName>Yellow - Attempting to Renew</fullName>
                    <color>#F3D904</color>
                    <default>true</default>
                    <label>Yellow - Attempting to Renew</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MS initiated</fullName>
                </value>
                <value>
                    <fullName>Customer Initiated</fullName>
                </value>
                <value>
                    <fullName>Contract Expiring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <description>What channel does the deal belong to?</description>
        <inlineHelpText>What channel does the deal belong to?</inlineHelpText>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BPM</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>REE</fullName>
                </value>
                <value>
                    <fullName>Strategic Account</fullName>
                </value>
                <value>
                    <fullName>Templeton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Number__c</fullName>
        <formula>Account.Client_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Number</label>
        <type>Text</type>
    </fields>
</CustomObject>